--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "deque": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp"
     }
 }
